# forword1

./: .env.example  Cargo.toml  readme.md
.github/workflows/: build.yml  rust.yml
src/: main.rs
