[package]
edition = "2021"
name = "forward1"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.28"
log = "0.4.19"
tokio = {version = "1", features = ["full"]}
tokio-tungstenite = "0.20.0"
tungstenite = "0.19.0"

[profile.release]
opt-level = 3
lto = true
debug = false
codegen-units = 1
panic = "abort"
