[package]
edition = "2021"
name = "forward1"
version = "0.2.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
env_logger = "0.11.0"
futures-util = "0.3.28"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["full"] }
tokio-tungstenite = "0.21.0"
tungstenite = "0.21.0"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
debug = false
panic = "abort"
strip = "symbols"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
